--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ address: 广东省佛山市南海区里水镇水口村环村路13号
 
 tel: 0757-85618418
 
-sale-tel: 
+phone: 13535723990
 
 fax: 0757-85683980
 
@@ -18,7 +18,7 @@ email: guojrong@163.com
 
 qq: 
 
-weixin: 
+weixin: 13535723990
 
 exclude:
   - README.md
