--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@ url: https://www.fsrongju.com
 
 title: 荣钜机械
 
-keywords: 
+keywords: 纬纱机,整经机,分纱机
 
-description: 
+description: 荣钜机械是一家专业生产销售纬纱机、整经机、分纱机、清纱机和切管机等鞋带、绳带、织带服装辅料与电线及绝缘导管编织机械辅助设备的科技型工厂。
 
 address: 广东省佛山市南海区里水镇水口村环村路13号
 
